--- a/projects/gora_feeds_pyteal_contract_examples/pyproject.toml
+++ b/projects/gora_feeds_pyteal_contract_examples/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 beaker-pyteal = "^1.1.1"
 algokit-utils = "^2.2.0"
 python-dotenv = "^1.0.0"
+gora = "^0.0.8"
 
 [tool.poetry.group.dev.dependencies]
 setuptools = "^69.0.2" # Adding explicitly to work around pyteal https://github.com/algorand/pyteal/issues/712
